[package]
name = "xci"
authors = ["Rice <3066814296@qq.com>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
winapi = { version = "0.3", features = ["xinput", "winerror"] }
crossterm = "0.27.0"